CSS whitespace gap fix

--- a/bfo/app/front/css/bfo-oddstable-sass.scss
+++ b/bfo/app/front/css/bfo-oddstable-sass.scss
@@ -10,6 +10,7 @@
   display: flex;
   z-index: 2;
   height: 20px;
+  border-top: 1px solid transparent;
   a {
     font-weight: 500;
     font-size: 15px;
